<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/eventFragment"
            android:icon="@drawable/baseline_dashboard_24"
            android:title="@string/event" />
        <item
            android:id="@+id/donateFragment"
            android:icon="@drawable/ic_menu_donate"
            android:title="@string/action_donate" />
        <item
            android:id="@+id/reportFragment"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/action_report" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/action_about" />

    </group>
    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share"
                android:onClick="shareApp"/>
        </menu>
    </item>
    <item android:title="@string/access_control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>

