<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/eventFragment">

    <fragment
        android:id="@+id/eventFragment"
        android:name="ie.setu.volunteerhub.ui.event.EventFragment"
        android:label="Event"
        tools:layout="@layout/fragment_event">
        <action
            android:id="@+id/action_eventFragment_to_addeventFragment"
            app:destination="@id/addeventFragment" />
    </fragment>
    <fragment
        android:id="@+id/donateFragment"
        android:name="ie.setu.volunteerhub.ui.donate.DonateFragment"
        android:label="@string/action_donate"
        tools:layout="@layout/fragment_donate" >
        <action
            android:id="@+id/action_donateFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="ie.setu.volunteerhub.ui.report.ReportFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_donateFragment"
            app:destination="@id/donateFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reportFragment_to_donationDetailFragment"
            app:destination="@id/donationDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.setu.volunteerhub.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_aboutFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="ie.setu.volunteerhub.ui.editprofile.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_edit_profile" >
    </fragment>
    <fragment
        android:id="@+id/donationDetailFragment"
        android:name="ie.setu.volunteerhub.ui.detail.DonationDetailFragment"
        android:label="Donation detail"
        tools:layout="@layout/fragment_donation_detail" >
        <argument
            android:name="donationId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/addeventFragment"
        android:name="ie.setu.volunteerhub.ui.addevent.AddEventFragment"
        android:label="Add Event"
        tools:layout="@layout/fragment_add_event" >
    </fragment>

</navigation>