<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addevent.AddEventFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_background">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp"
                android:background="@drawable/white_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add event"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/lavender" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"
                    android:textSize="18sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editName"
                    android:background="@drawable/white_background"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/details"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:text="@string/details"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/Details"
                    android:background="@drawable/white_background"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:text="@string/location"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/Location"
                    android:background="@drawable/white_background"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:text="date"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"
                    android:textSize="18sp"/>
                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <!-- Add other EditText fields here -->

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="Save"
                    android:id="@+id/saveButton"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/lavender"
                    app:cornerRadius="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
